welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: unclosed character literal
  if (vuBiscuit()=='true'){
                        ^Program:16: error: unclosed character literal
  if (vuBiscuit()=='false'){
                         ^Program:13: error: ')' expected but something found.
  if (vuBiscuit()=='true'){
                        ^